resolved flash of desktop sidebar on mobile refresh

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,14 @@ body {
 
 .menuTranslate {
     transform: translateX(-120%);
+    transition-property: transform;
+    transition-duration: 300ms;
 }
 
 .menuTranslate.show {
     transform: translateX(0);
+    transition-property: transform;
+    transition-duration: 300ms;
 }
 
 .input-style {
